--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,11 +14,15 @@
   journal = {Composite Structures}
 }
 
-@article{Nakka2023-mpi-cnn,
+@article{Nakka2023,
+  doi = {10.1038/s41598-023-34823-3},
+  url = {https://doi.org/10.1038/s41598-023-34823-3},
   year = {2023},
-  month = Apr,
+  month = jun,
   publisher = {Springer Science and Business Media {LLC}},
-  author = {(Under Review) Rajesh Nakka and Dineshkumar Harursampath and Sathiskumar A. Ponnusami},
+  volume = {13},
+  number = {1},
+  author = {Rajesh Nakka and Dineshkumar Harursampath and Sathiskumar A Ponnusami},
   title = {A generalised deep learning-based surrogate model for homogenisation utilising material property encoding and physics-based bounds},
   journal = {Scientific Reports}
 }
