updated repos list and resume

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,11 +28,30 @@
 }
 
 
-@article{Nakka2023-fcps,
+@article{Nakka2023,
+  doi = {10.1016/j.compstruct.2023.117321},
+  url = {https://doi.org/10.1016/j.compstruct.2023.117321},
   year = {2023},
-  month = Apr,
+  month = oct,
   publisher = {Elsevier {BV}},
-  author = {(Under Review) Rajesh Nakka and A. Phanendra Kumar and Dineshkumar Harursampath and Sathiskumar A. Ponnusami},
+  volume = {321},
+  pages = {117321},
+  author = {Rajesh Nakka and A. Phanendra Kumar and Dineshkumar Harursampath and Sathiskumar A. Ponnusami},
   title = {Influence of fibre cross-section profile on the multi-physical properties of uni-directional composites},
   journal = {Composite Structures}
+}
+
+
+@article{PhanendraKumar2023,
+  doi = {10.1088/1361-665x/acf53d},
+  url = {https://doi.org/10.1088/1361-665x/acf53d},
+  year = {2023},
+  month = sep,
+  publisher = {{IOP} Publishing},
+  volume = {32},
+  number = {10},
+  pages = {105024},
+  author = {A Phanendra Kumar and Rajesh Nakka and Dineshkumar Harursampath and Sathiskumar A Ponnusami},
+  title = {Computational evaluation of absorption characteristics of ceramic-based auxetic materials in X-band frequency range},
+  journal = {Smart Materials and Structures}
 }
